Initial setup of ElasticSearch client/server with a minimal mapping just to get started.

--- a/Archivist/src/main/resources/application.yml
+++ b/Archivist/src/main/resources/application.yml
@@ -4,3 +4,11 @@
 #
 server:
     port: 8066
+
+#
+# Archivist Settings
+#
+archivist:
+  index:
+    # The name of the elastic search index
+    alias: "archivist"
