Converted the IngestDao over to using the new object mapping utils.

--- a/Archivist/src/main/resources/elastic-mapping.json
+++ b/Archivist/src/main/resources/elastic-mapping.json
@@ -13,6 +13,10 @@
     "ingest": {
       "dynamic" : false,
       "properties": {
+        "_id": {
+          "store": true,
+          "index": "not_analyzed"
+        },
         "timeCreated" : {
           "type" : "date"
         },
@@ -32,6 +36,13 @@
     "asset" : {
       "dynamic" : true,
       "properties" : {
+        "_id": {
+          "path": "id"
+        },
+        "_id": {
+          "store": true,
+          "index": "not_analyzed"
+        },
         "timeCreated" : {
            "type" : "date"
         },
