Added DAO functions for pulling the next ingest and updating its state.

--- a/Archivist/src/main/resources/elastic-mapping.json
+++ b/Archivist/src/main/resources/elastic-mapping.json
@@ -20,8 +20,15 @@
         "timeCreated" : {
           "type" : "date"
         },
-        "timeModified" : {
+        "timeStarted" : {
           "type" : "date"
+        },
+        "timeStopped" : {
+          "type" : "date"
+        },
+        "state": {
+          "type": "integer",
+          "null_value": 0
         },
         "paths" : {
           "type" : "string",
