--- a/Archivist/pom.xml
+++ b/Archivist/pom.xml
@@ -91,6 +91,12 @@
       <version>1.5.2</version>
     </dependency>
 
+  <dependency>
+    <groupId>com.drewnoakes</groupId>
+    <artifactId>metadata-extractor</artifactId>
+    <version>2.8.1</version>
+  </dependency>
+
   </dependencies>
 
   <build>
