--- a/Archivist/src/main/resources/elastic-mapping.json
+++ b/Archivist/src/main/resources/elastic-mapping.json
@@ -18,6 +18,10 @@
           "index": "not_analyzed",
           "type": "string"
         },
+        "name": {
+          "type": "string",
+          "index": "not_analyzed"
+        },
         "timeCreated" : {
           "type" : "date"
         },
