Added ProxyProcessor and support for making proxies.

--- a/Archivist/src/main/resources/application.yml
+++ b/Archivist/src/main/resources/application.yml
@@ -15,5 +15,8 @@ security:
 archivist:
     index:
         alias: "archivist"
-
+    proxies:
+        path: "proxies"
+        format: "png"
+        scales: [ 0.25 ]
 
