Refactored proxy maker to use ProxyConfig which can be specified with the IngestBuilder

--- a/Archivist/src/main/resources/application.yml
+++ b/Archivist/src/main/resources/application.yml
@@ -16,7 +16,7 @@ archivist:
     index:
         alias: "archivist"
     proxies:
-        path: "proxies"
+        basePath: "proxies"
         format: "png"
-        scales: [ 0.25 ]
+
 
