--- a/Archivist/pom.xml
+++ b/Archivist/pom.xml
@@ -81,6 +81,12 @@
   </dependency>
 
   <dependency>
+    <groupId>com.fasterxml.uuid</groupId>
+    <artifactId>java-uuid-generator</artifactId>
+    <version>3.1.4</version>
+  </dependency>
+
+  <dependency>
     <groupId>com.fasterxml.jackson.core</groupId>
     <artifactId>jackson-core</artifactId>
   </dependency>
