--- a/Archivist/src/main/resources/elastic-mapping.json
+++ b/Archivist/src/main/resources/elastic-mapping.json
@@ -99,6 +99,10 @@
             }
           }
         },
+        "collections": {
+          "type" : "string",
+          "index": "not_analyzed"
+        },
         "source" : {
           "type" : "object",
           "properties" : {
