--- a/Archivist/pom.xml
+++ b/Archivist/pom.xml
@@ -49,7 +49,6 @@
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-websocket</artifactId>
     </dependency>
-
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-test</artifactId>
@@ -89,6 +88,12 @@
   <dependency>
     <groupId>com.fasterxml.jackson.core</groupId>
     <artifactId>jackson-core</artifactId>
+  </dependency>
+
+  <dependency>
+    <groupId>io.netty</groupId>
+	<artifactId>netty-all</artifactId>
+    <version>4.0.28.Final</version>
   </dependency>
 
   </dependencies>
