--- a/Archivist/pom.xml
+++ b/Archivist/pom.xml
@@ -31,10 +31,6 @@
     </dependency>
     <dependency>
       <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-amqp</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-aop</artifactId>
     </dependency>
     <dependency>
@@ -53,6 +49,11 @@
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-test</artifactId>
       <scope>test</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-tx</artifactId>
     </dependency>
 
     <dependency>
@@ -92,8 +93,14 @@
 
   <dependency>
     <groupId>io.netty</groupId>
-	<artifactId>netty-all</artifactId>
+  <artifactId>netty-all</artifactId>
     <version>4.0.28.Final</version>
+  </dependency>
+
+  <dependency>
+    <groupId>com.hazelcast</groupId>
+    <artifactId>hazelcast</artifactId>
+    <version>3.4.2</version>
   </dependency>
 
   </dependencies>
