Comment out disabling of security.

--- a/Archivist/src/main/resources/application.yml
+++ b/Archivist/src/main/resources/application.yml
@@ -5,9 +5,9 @@
 server:
     port: 8066
 
-security:
-    basic:
-        enabled: false
+#security:
+#    basic:
+#        enabled: false
 
 #
 # Archivist Settings
