--- a/Archivist/src/main/resources/elastic-mapping.json
+++ b/Archivist/src/main/resources/elastic-mapping.json
@@ -57,6 +57,22 @@
         }
       }
     },
+    "user": {
+      "_all" : {"enabled" : false},
+      "dynamic" : false,
+      "properties": {
+        "_id": {
+          "store": true,
+          "index": "not_analyzed",
+          "type": "string"
+        },
+        "password": {
+          "store": true,
+          "type": "string",
+          "index": "not_analyzed"
+        }
+      }
+    },
     "asset" : {
       "_all" : {"enabled" : false},
       "dynamic" : true,
