--- a/Archivist/src/main/resources/application.yml
+++ b/Archivist/src/main/resources/application.yml
@@ -5,6 +5,12 @@
 server:
     port: 8066
 
+
+spring:
+    datasource:
+        url: "jdbc:h2:mem:archivist;DB_CLOSE_DELAY=-1;MODE=Oracle;"
+        driver-class-name: "org.h2.Driver"
+
 #security:
 #    basic:
 #        enabled: false
