--- a/Archivist/pom.xml
+++ b/Archivist/pom.xml
@@ -95,6 +95,12 @@
       <version>4.0.28.Final</version>
     </dependency>
 
+    <dependency>
+      <groupId>com.zorroa</groupId>
+      <artifactId>archivist-sdk</artifactId>
+      <version>1.0.0</version>
+      <scope>compile</scope>
+    </dependency>
   </dependencies>
 
   <build>
