--- a/Archivist/pom.xml
+++ b/Archivist/pom.xml
@@ -95,6 +95,12 @@
       <version>4.0.28.Final</version>
     </dependency>
 
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-lang3</artifactId>
+      <version>3.4</version>
+    </dependency>
+
   </dependencies>
 
   <build>
