Added archivist.ingest.assetWorkersPerIngest option.  Clarified the ingest worker option.

--- a/Archivist/src/main/resources/application.yml
+++ b/Archivist/src/main/resources/application.yml
@@ -27,6 +27,7 @@ archivist:
         basePath: "proxies"
         format: "png"
     ingest:
-        parallel: 1
+        ingestWorkers: 1
+        assetWorkersPerIngest: 4
 
 
