Add Elastic mapping for hierarchical folders

--- a/Archivist/src/main/resources/elastic-mapping.json
+++ b/Archivist/src/main/resources/elastic-mapping.json
@@ -80,6 +80,18 @@
           }
         }
       }
+    },
+    "folders" : {
+      "properties" : {
+        "parentGuid" : {
+          "index" : "not_analyzed",
+          "type" : "string"
+        },
+        "owner" : {
+          "index" : "not_analyzed",
+          "type" : "string"
+        }
+      }
     }
   }
 }
