Show ingest progress. [Finishes #95284622]

--- a/Archivist/src/main/resources/elastic-mapping.json
+++ b/Archivist/src/main/resources/elastic-mapping.json
@@ -25,6 +25,7 @@
     "asset" : {
       "_all" : {"enabled" : false},
       "dynamic" : true,
+      "_timestamp" : { "enabled" : true },
       "properties" : {
         "_id": {
           "store": true,
