Add Snapshot object type and implement using ES. [Finishes ##100155734]

--- a/Archivist/src/main/resources/application.yml
+++ b/Archivist/src/main/resources/application.yml
@@ -29,5 +29,7 @@ archivist:
     ingest:
         ingestWorkers: 1
         assetWorkersPerIngest: 4
-
+    snapshot:
+        basePath: "snapshots"
+        repoName: "backups"
 
