--- a/Analyst/pom.xml
+++ b/Analyst/pom.xml
@@ -51,6 +51,12 @@
             <version>${slf4jVersion}</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-csv</artifactId>
+            <version>1.1</version>
+        </dependency>
+
     </dependencies>
 
     <build>
