--- a/Archivist/src/main/resources/elastic-mapping.json
+++ b/Archivist/src/main/resources/elastic-mapping.json
@@ -56,7 +56,7 @@
           "search_analyzer": "simple",
           "payloads": false
         },
-        "collections": {
+        "folders": {
           "type" : "string",
           "index": "not_analyzed"
         },
@@ -84,11 +84,18 @@
     },
     "folders" : {
       "properties" : {
-        "parentGuid" : {
+        "parentId" : {
           "index" : "not_analyzed",
           "type" : "string"
         },
-        "owner" : {
+        "userId" : {
+          "type" : "integer"
+        },
+        "name" : {
+          "index" : "not_analyzed",
+          "type" : "string"
+        },
+        "query" : {
           "index" : "not_analyzed",
           "type" : "string"
         }
