--- a/Archivist/pom.xml
+++ b/Archivist/pom.xml
@@ -49,6 +49,13 @@
       <groupId>com.h2database</groupId>
         <artifactId>h2</artifactId>
     </dependency>
+
+    <dependency>
+      <groupId>com.googlecode.flyway</groupId>
+      <artifactId>flyway-core</artifactId>
+      <version>2.3.1</version>
+    </dependency>
+
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-tx</artifactId>
