--- a/Archivist/pom.xml
+++ b/Archivist/pom.xml
@@ -120,6 +120,12 @@
       <scope>compile</scope>
     </dependency>
 
+    <dependency>
+      <groupId>org.codehaus.groovy</groupId>
+      <artifactId>groovy-all</artifactId>
+      <version>2.4.0</version>
+    </dependency>
+
   </dependencies>
 
   <build>
