--- a/Archivist/src/main/resources/elastic-mapping.json
+++ b/Archivist/src/main/resources/elastic-mapping.json
@@ -43,29 +43,33 @@
   },
 
   "mappings" : {
-    "asset" : {
-      "_all" : {"enabled" : false},
-      "dynamic" : true,
-      "_timestamp" : { "enabled" : true },
-      "properties" : {
+    "asset": {
+      "_all": {
+        "enabled": false
+      },
+      "dynamic": true,
+      "_timestamp": {
+        "enabled": true
+      },
+      "properties": {
         "_id": {
           "store": true,
           "index": "not_analyzed",
           "type": "string"
         },
-        "timeCreated" : {
-           "type" : "date"
+        "timeCreated": {
+          "type": "date"
         },
-        "timeModified" : {
-          "type" : "date"
+        "timeModified": {
+          "type": "date"
         },
-        "userCreated" : {
-         "type" : "string",
-         "index": "not_analyzed"
+        "userCreated": {
+          "type": "string",
+          "index": "not_analyzed"
         },
-        "userModified" : {
-          "type" : "string",
-          "index" : "not_analyzed"
+        "userModified": {
+          "type": "string",
+          "index": "not_analyzed"
         },
         "keywords": {
           "type": "multi_field",
@@ -87,38 +91,40 @@
           "payloads": false
         },
         "folders": {
-          "type" : "string",
+          "type": "string",
           "index": "not_analyzed"
         },
-        "source" : {
-          "type" : "object",
-          "properties" : {
+        "source": {
+          "type": "object",
+          "properties": {
             "path": {
-                "type" : "string",
-                "index" : "not_analyzed",
-                "copy_to": ["keywords.indexed", "keywords.untouched"]
-              }
+              "type": "string",
+              "index": "not_analyzed",
+              "copy_to": [
+                "keywords.indexed",
+                "keywords.untouched"
+              ]
             }
           }
         }
       }
     },
-    "folders" : {
-      "properties" : {
-        "parentId" : {
-          "index" : "not_analyzed",
-          "type" : "string"
+    "folders": {
+      "properties": {
+        "parentId": {
+          "index": "not_analyzed",
+          "type": "string"
         },
-        "userId" : {
-          "type" : "integer"
+        "userId": {
+          "type": "integer"
         },
-        "name" : {
-          "index" : "not_analyzed",
-          "type" : "string"
+        "name": {
+          "index": "not_analyzed",
+          "type": "string"
         },
-        "query" : {
-          "index" : "not_analyzed",
-          "type" : "string"
+        "query": {
+          "index": "not_analyzed",
+          "type": "string"
         }
       }
     }
