Worked the new permissions system into the elasitic mapping and elastic query generation.

--- a/Archivist/src/main/resources/elastic-mapping.json
+++ b/Archivist/src/main/resources/elastic-mapping.json
@@ -101,6 +101,18 @@
               "index_analyzer": "path_analyzer"
             }
           }
+        },
+        "permissions": {
+          "properties": {
+            "search": {
+              "type": "integer",
+              "index": "not_analyzed"
+            },
+            "export": {
+              "type": "integer",
+              "index": "not_analyzed"
+            }
+          }
         }
       }
     },
