--- a/Analyst/pom.xml
+++ b/Analyst/pom.xml
@@ -10,7 +10,7 @@
 
     <groupId>com.zorroa</groupId>
     <artifactId>ingestors</artifactId>
-    <version>0.2.0</version>
+    <version>0.3.0</version>
     <packaging>jar</packaging>
 
     <properties>
@@ -22,8 +22,14 @@
         <dependency>
             <groupId>com.zorroa</groupId>
             <artifactId>archivist-sdk</artifactId>
-            <version>0.2.1</version>
+            <version>0.4.2</version>
             <scope>compile</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>18.0</version>
         </dependency>
 
         <dependency>
