--- a/Archivist/pom.xml
+++ b/Archivist/pom.xml
@@ -125,10 +125,24 @@
 
   <build>
     <plugins>
+      <!--
+      To rename the JAR the maven-jar-plugin is required until
+      spring-boot 1.3 is released.
+      -->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-jar-plugin</artifactId>
+        <configuration>
+          <finalName>archivist</finalName>
+        </configuration>
+      </plugin>
 
       <plugin>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
+        <configuration>
+          <finalName>archivist</finalName>
+        </configuration>
       </plugin>
 
       <plugin>
