--- a/Analyst/pom.xml
+++ b/Analyst/pom.xml
@@ -71,6 +71,18 @@
 
         <plugins>
 
+            <!--
+            To rename the JAR the maven-jar-plugin is required until
+            spring-boot 1.3 is released.
+            -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <configuration>
+                    <finalName>ingestors</finalName>
+                </configuration>
+            </plugin>
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
