--- a/Archivist/pom.xml
+++ b/Archivist/pom.xml
@@ -5,7 +5,7 @@
 
   <groupId>com.zorroa</groupId>
   <artifactId>archivist</artifactId>
-  <version>0.7.0</version>
+  <version>0.7.1</version>
   <packaging>jar</packaging>
 
   <name>zorroa-archivist</name>
@@ -84,6 +84,12 @@
       <groupId>org.elasticsearch</groupId>
       <artifactId>elasticsearch</artifactId>
       <version>1.7.3</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.codehaus.groovy</groupId>
+      <artifactId>groovy-all</artifactId>
+      <version>2.4.4</version>
     </dependency>
 
     <dependency>
