--- a/Archivist/src/main/resources/elastic-mapping.json
+++ b/Archivist/src/main/resources/elastic-mapping.json
@@ -113,6 +113,10 @@
               "index": "not_analyzed"
             }
           }
+        },
+        "exports": {
+          "type": "integer",
+          "index": "not_analyzed"
         }
       }
     },
