--- a/Archivist/src/main/resources/application.yml
+++ b/Archivist/src/main/resources/application.yml
@@ -40,8 +40,7 @@ archivist:
     ingest:
         ingestWorkers: 1
     export:
-        workspacePath: /tmp/archivist/exports
-        outputPath: "%{env:HOME}/Downloads/assetExport%{export:id}"
+        basePath: "exports"
     snapshot:
         basePath: "snapshots"
         repoName: "backups"
