Changed the default proxy format to jpg and exposed it as a configuration option.

--- a/Archivist/src/main/resources/application.yml
+++ b/Archivist/src/main/resources/application.yml
@@ -36,7 +36,7 @@ archivist:
         alias: "archivist"
     proxies:
         basePath: "proxies"
-        format: "png"
+        format: "jpg"
     ingest:
         ingestWorkers: 1
     export:
