Adding "missing" proxy format setting to unit test config, this should actually be inherited from the packaged config defaults, will track that down later.

--- a/Archivist/src/test/resources/application.yml
+++ b/Archivist/src/test/resources/application.yml
@@ -35,6 +35,7 @@ archivist:
     index:
         alias: "archivist"
     proxies:
+        format: "jpg"
         basePath: "proxies"
     ingest:
         ingestWorkers: 1
