Fixes folder refactor. [Fixes #108621210]

--- a/Archivist/src/main/resources/elastic-mapping.json
+++ b/Archivist/src/main/resources/elastic-mapping.json
@@ -135,7 +135,7 @@
         },
         "query": {
           "index": "not_analyzed",
-          "type": "string"
+          "type": "object"
         }
       }
     }
