Added folder properties createdUser, modifiedUser, dropped shared.

--- a/Archivist/src/main/resources/elastic-mapping.json
+++ b/Archivist/src/main/resources/elastic-mapping.json
@@ -126,7 +126,10 @@
           "index": "not_analyzed",
           "type": "string"
         },
-        "userId": {
+        "createdUser": {
+          "type": "integer"
+        },
+        "modifiedUser": {
           "type": "integer"
         },
         "name": {
