Consistently use int for user id.

--- a/Archivist/src/main/resources/elastic-mapping.json
+++ b/Archivist/src/main/resources/elastic-mapping.json
@@ -64,11 +64,11 @@
           "type": "date"
         },
         "userCreated": {
-          "type": "string",
+          "type": "integer",
           "index": "not_analyzed"
         },
         "userModified": {
-          "type": "string",
+          "type": "integer",
           "index": "not_analyzed"
         },
         "keywords": {
