Updates for selection and removing folder from Room.

--- a/Archivist/src/main/resources/elastic-mapping.json
+++ b/Archivist/src/main/resources/elastic-mapping.json
@@ -89,6 +89,10 @@
           "type": "string",
           "index": "not_analyzed"
         },
+        "selectedRooms": {
+          "type": "integer",
+          "index": "not_analyzed"
+        },
         "source": {
           "properties": {
             "path": {
