Changed the default qstring field to the new keywords.all

--- a/Archivist/src/main/resources/elastic-mapping.json
+++ b/Archivist/src/main/resources/elastic-mapping.json
@@ -1,5 +1,10 @@
 {
   "settings": {
+    "index": {
+      "query": {
+        "default_field": "keywords.all"
+      }
+    },
     "analysis": {
       "analyzer": {
         "default": {
