ExportService: added check for exceeding max assets on an export, and also no assets.

--- a/Archivist/src/main/resources/application.yml
+++ b/Archivist/src/main/resources/application.yml
@@ -42,6 +42,7 @@ archivist:
     export:
         autoStart: true
         basePath: "exports"
+        maxAssetCount: 1024
     snapshot:
         basePath: "snapshots"
         repoName: "backups"
