--- a/Archivist/src/main/resources/elastic-mapping.json
+++ b/Archivist/src/main/resources/elastic-mapping.json
@@ -15,6 +15,11 @@
             "lowercase",
             "stop"
           ]
+        },
+        "path_analyzer" : {
+          "type" : "custom",
+          "tokenizer" : "path_tokenizer",
+          "filter" : ["standard"]
         }
       },
       "filter": {
@@ -100,6 +105,20 @@
         },
         "source": {
           "properties": {
+            "directory": {
+              "type": "string",
+              "index": "analyzed",
+              "fields": {
+                "raw": {
+                  "type": "string",
+                  "index": "not_analyzed"
+                },
+                "dir": {
+                  "type": "string",
+                  "index_analyzer": "path_analyzer"
+                }
+              }
+            },
             "path": {
               "type": "string",
               "index" : "analyzed",
@@ -107,6 +126,10 @@
                 "raw": {
                   "type": "string",
                   "index": "not_analyzed"
+                },
+                "dir": {
+                  "type": "string",
+                  "index_analyzer": "path_analyzer"
                 }
               }
             }
