Fix schedule test times

--- a/Archivist/.travis.yml
+++ b/Archivist/.travis.yml
@@ -4,4 +4,8 @@ jdk:
   - oraclejdk8
 
 install:
+  - rm -rf db proxies exports unittest
   - ./travis-install-archivist-sdk.sh
+
+notifications:
+  slack: zorroa:U0489fQGuSPls5EZZfSUoGsL
