--- a/Archivist/pom.xml
+++ b/Archivist/pom.xml
@@ -25,7 +25,7 @@
     <com.zorroa.javaDir>${com.zorroa.appDir}/java</com.zorroa.javaDir>
   </properties>
   <dependencies>
-    
+
     <dependency>
       <groupId>com.zorroa</groupId>
       <artifactId>archivist-sdk</artifactId>
@@ -126,6 +126,13 @@
       <artifactId>commons-lang3</artifactId>
       <version>3.4</version>
     </dependency>
+
+    <dependency>
+      <groupId>com.google.code.findbugs</groupId>
+      <artifactId>jsr305</artifactId>
+      <version>3.0.1</version>
+    </dependency>
+
   </dependencies>
 
   <build>
